packages/astro/test/fixtures/errors/src/pages/svelte-runtime-error.astro
---
import SvelteRuntimeError from '../components/SvelteRuntimeError.svelte';
---

<div>
  <SvelteRuntimeError />
</div>
